@@ -18,6 +18,7 @@ Version 1.7.1+svn:
    * Added support for desktop notifications using KDE's
      org.kde.VisualNotifications DBus service
    * Changed "Toggle Full Screen" button to say "Full Screen" (bug #13909)
+   * Added cost of units recruited, recalled, killed, and lost, to the statistics window (patch #1190)
  * Miscellaneous and bugfixes:
    * Fixed language switch not affecting unit descriptions (bug #13827)
    * Fixed teleporting to impassable terrain (bug #13795)
